adding data level

--- a/src/app/components/cancertype-tile/cancertype-tile.component.html
+++ b/src/app/components/cancertype-tile/cancertype-tile.component.html
@@ -11,7 +11,7 @@
     >
 
     <!-- [disabled]="item.disabled" -->
-    <ng-option *ngFor="let item of cancerTypeItems" [value]="item.id" >{{item.name}}</ng-option>
+    <ng-option *ngFor="let item of cancerTypeItems" [value]="item.backendId" >{{item.name}}</ng-option>
   </ng-select>
 
 </div>
