webpage pre layout changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container is-fluid">
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <img routerLink="/" src="assets/covex_logo.png" class="menu-icon is-hoverable navbar-item logo" alt="logo"/>
+      <img routerLink="/" src="assets/caddie_logo.png" class="menu-icon is-hoverable navbar-item logo" alt="logo"/>
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" (click)="toggleMobileMenu()">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -32,7 +32,7 @@
         <div class="navbar-item">
           <div class="field is-grouped">
             <p class="control">
-               Version 1.1
+               Version 0.1
             </p>
           </div>
         </div>
