--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <button type="button" class="button is-rounded is-primary" (click)="onClickEventReceived()">
+    <button type="button" class="button   is-primary" (click)="onClickEventReceived()">
       {{ buttonText }}
     </button>
 </div>
