--- a/src/app/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/dialogs/launch-analysis/launch-analysis.component.html
@@ -27,7 +27,7 @@
         </div>
       </div>
 
-      <div class="tabs is-toggle is-small is-fullwidth is-rounded has-tooltip">
+      <div class="tabs is-toggle is-small is-fullwidth   has-tooltip">
         <ul>
           <li [class.is-active]="algorithm === algo.slug" *ngFor="let algo of algorithms">
             <a (click)="algorithm = algo.slug" class="is-boxed is-medium">{{algo.name}}</a>
@@ -509,7 +509,7 @@
     </section>
 
     <footer class="modal-card-foot">
-      <button (click)="startTask(); close()" class="button is-success is-rounded has-tooltip"
+      <button (click)="startTask(); close()" class="button is-success   has-tooltip"
               data-tooltip="Run the analysis."
               [disabled]="(target === 'drug' && hasBaits) || !analysis.canLaunchTask() || (algorithm === 'keypathwayminer' && hasBaits)">
         <span class="icon">
@@ -519,7 +519,7 @@
           Launch
         </span>
       </button>
-      <button (click)="close()" class="button is-rounded has-tooltip" data-tooltip="Close the current window.">Close
+      <button (click)="close()" class="button   has-tooltip" data-tooltip="Close the current window.">Close
       </button>
     </footer>
   </div>
