--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -3,7 +3,7 @@
     <section class="hero is-primary">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title">About CoVex</h1>
+          <h1 class="title">About Caddie</h1>
         </div>
       </div>
     </section>
@@ -11,7 +11,7 @@
     <div class="hero container">
       <div class="column is-8 is-offset-2">
         <div class="container has-text-centered">
-          <img src="assets/covex_logo.png">
+          <img src="assets/caddie_logo.png">
           <h2 class="subtitle is-3"> A Coronavirus Explorer </h2>
         </div>
         <div class="content">
