--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,7 @@ img.menu-icon.is-hoverable.navbar-item.logo {
 
 .landing {
   background-color: $primary;
-  background-image: url("assets/virus_background.jpg");
+  background-image: url("assets/caddie_background_large.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: calc(100vh - 60px);
@@ -238,3 +238,5 @@ body {
 .mb-3 {
   margin-bottom: 10px;
 }
+
+
