--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -3,9 +3,10 @@
   <div class="container has-text-centered">
     <div class="column">
       <div class="logo-box is-hidden-mobile">
-        <img src="assets/caddie_logo.png" style="height: 233px; width: 600px">
+        <img src="assets/caddie_logo.png" style="height: 300px">
       </div>
 
+      <!--
       <div class="video-container">
         <div class="has-text-centered video-box">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/yK1rbFi5wW0" frameborder="0"
@@ -18,6 +19,7 @@
           </iframe>
         </div>
       </div>
+      -->
 
       <div class="button-box is-hidden-mobile">
         <button class="button has-text-info is-large  ">
@@ -39,7 +41,7 @@
 
       <div class="text-box is-hidden-mobile">
         <h1 class="subtitle is-3">
-          Explore the virus-host interactome
+          Explore the cancer driver gene interactome
         </h1>
         <h1 class="subtitle is-3">
           Find putative drug targets
