--- a/src/app/components/info-tile/info-tile.component.html
+++ b/src/app/components/info-tile/info-tile.component.html
@@ -26,7 +26,24 @@
       <b><span>Protein Name:</span></b>
       {{ wrapper.data.proteinName }}
     </p>
+    <p>
+      <b><span>Node Degree:</span></b>
+      {{ wrapper.data.interactions.length }}
+    </p>
+
+    <ng-container *ngIf="wrapper.data.cancerOccurrences">
+      <b><span>Related Cancer Types ({{ wrapper.data.cancerOccurrences }}):</span></b>
+      <div class="content scroll-300">
+        <ul *ngFor="let item of wrapper_cancer_types">
+          <li>{{ item.name }}</li>
+        </ul>
+      </div>
+    </ng-container>
+
+
   </div>
+
+
   <div *ngIf="wrapper.type === 'cancerNode'">
     <p>
       <b><span>Gene Name: </span></b>
@@ -54,7 +71,23 @@
       <b><span>Protein Name:</span></b>
         {{ wrapper.data.proteinName }}
     </p>
+    <p>
+      <b><span>Node Degree:</span></b>
+      {{ wrapper.data.interactions.length }}
+    </p>
+    <ng-container *ngIf="wrapper.data.cancerOccurrences">
+      <b><span>Related Cancer Types ({{ wrapper.data.cancerOccurrences }}):</span></b>
+      <div class="content scroll-300">
+        <ul *ngFor="let item of wrapper_cancer_types">
+          <li>{{ item.name }}</li>
+        </ul>
+      </div>
+    </ng-container>
+
+
   </div>
+
+
   <div *ngIf="wrapper.type === 'drug'">
     <p>
       <b><span>Name: </span></b>
@@ -81,6 +114,10 @@
       </div>
       <small class="list-item"><i>Links provided by WHO</i></small>
     </div>
+    <p>
+      <b><span>Node Degree:</span></b>
+      {{ wrapper.data.interactions.length }}
+    </p>
   </div>
 
   <div class="field has-addons add-remove-toggle" *ngIf="wrapper.type !== 'drug'">
