--- a/src/app/pages/explorer-page/explorer-page.component.scss
+++ b/src/app/pages/explorer-page/explorer-page.component.scss
@@ -48,3 +48,11 @@
     padding: 3px;
   }
 }
+
+.fullscreen {
+  position:absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  height: 100vh !important;
+  z-index:10 !important;
+}
