clean up files following lint

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -50,10 +50,10 @@
           Repurpose drugs
         </h1>
         <h1 class="subtitle is-3">
-          {{ cancerDriverGenes_n }} Cancer Driver Genes <br>
-          {{ genes_n }} Genes <br>
-          {{ proteins_n }} Proteins <br>
-          {{ drugs_n }} Drugs <br>
+          {{ cancerDriverGenesN }} Cancer Driver Genes <br>
+          {{ genesN }} Genes <br>
+          {{ proteinsN }} Proteins <br>
+          {{ drugsN }} Drugs <br>
         </h1>
       </div>
     </div>
