--- a/src/app/components/info-tile/info-tile.component.html
+++ b/src/app/components/info-tile/info-tile.component.html
@@ -34,7 +34,7 @@
     <ng-container *ngIf="wrapper.data.cancerOccurrences">
       <b><span>Related Cancer Types ({{ wrapper.data.cancerOccurrences }}):</span></b>
       <div class="content scroll-300">
-        <ul *ngFor="let item of wrapper_cancer_types">
+        <ul *ngFor="let item of wrapperCancerTypes">
           <li>{{ item.name }}</li>
         </ul>
       </div>
@@ -78,7 +78,7 @@
     <ng-container *ngIf="wrapper.data.cancerOccurrences">
       <b><span>Related Cancer Types ({{ wrapper.data.cancerOccurrences }}):</span></b>
       <div class="content scroll-300">
-        <ul *ngFor="let item of wrapper_cancer_types">
+        <ul *ngFor="let item of wrapperCancerTypes">
           <li>{{ item.name }}</li>
         </ul>
       </div>
