clean up files following lint

--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -282,7 +282,7 @@
                                           [dataLevel]="currentDataLevel"
                                           (selectItem)="queryAction($event)"
                                           placeholder="Search..."
-                                          removeOnSelect=false
+                                          removeOnSelect="false"
                 ></app-query-tile-component>
               </div>
             </div>
@@ -325,7 +325,7 @@
                                         [dataLevel]="currentDataLevel"
                                         (selectItem)="addFilterNode($event)"
                                         placeholder="Add..."
-                                        removeOnSelect=true
+                                        removeOnSelect="true"
               >
               </app-query-tile-component>
 
